--- a/Solution/index.html
+++ b/Solution/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<h1>Our Menu</h1>
+<h1>Partido de futbol</h1>
 
 <div class="row">
   <div class="col-lg-4 col-md-6 col-sm-12" id="aa"><section class="todo"><div class="tit1"><h2 class="1">chicken</h2></div><p>Chicken lorem ipsum dolor sit amel, consectetur
@@ -27,7 +27,7 @@
   <div class="col-lg-3 col-md-6"><p>Item 6</p></div>
   <div class="col-lg-3 col-md-6"><p>Item 7</p></div>
   <div class="col-lg-3 col-md-6"><p>Item 8</p></div> -->
-</div>
+</div> 
 
 </body>
 </html>
