--- a/Solution/index.html
+++ b/Solution/index.html
@@ -7,10 +7,10 @@
 <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<h1>Partido de futbol</h1>
+<h1>papaya</h1>
 
 <div class="row">
-  <div class="col-lg-4 col-md-6 col-sm-12" id="aa"><section class="todo"><div class="tit1"><h2 class="1">chicken</h2></div><p>Chicken lorem ipsum dolor sit amel, consectetur
+  <div class="col-lg-4 col-md-6 col-sm-12" id="aa"><section class="todo"><div class="tit1"><h2 class="1">fabrica</h2></div><p>Chicken lorem ipsum dolor sit amel, consectetur
     adipisicing elit, ded do eiusmod tempor incididunt ut labore et dolore
      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
       laboris nisi ut aliquip ex ea commodo consequat </p></section></div>
