--- a/Solution/index.html
+++ b/Solution/index.html
@@ -1,33 +1,54 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Responsive Layout</title>
-<link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-<h1>papaya</h1>
+  <html>
+    <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>
+        Sports
+      </title>
+      <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+      <h1>Sports</h1>
 
-<div class="row">
-  <div class="col-lg-4 col-md-6 col-sm-12" id="aa"><section class="todo"><div class="tit1"><h2 class="1">fabrica</h2></div><p>Chicken lorem ipsum dolor sit amel, consectetur
-    adipisicing elit, ded do eiusmod tempor incididunt ut labore et dolore
-     magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-      laboris nisi ut aliquip ex ea commodo consequat </p></section></div>
-      <div class="col-lg-4 col-md-6 col-sm-12" id="aa"><section class="todo"><div class="tit2" id="2"><h2>Beef</h2></div><p>Chicken lorem ipsum dolor sit amel, consectetur
-        adipisicing elit, ded do eiusmod tempor incididunt ut labore et dolore
-         magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-          laboris nisi ut aliquip ex ea commodo consequat </p></section></div>
-          <div class="col-lg-4 col-md-12 col-sm-12" id="aa"><section class="todo"><div class="tit"><h2>Sushi</h2></div><p>Chicken lorem ipsum dolor sit amel, consectetur
-            adipisicing elit, ded do eiusmod tempor incididunt ut labore et dolore
-             magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-              laboris nisi ut aliquip ex ea commodo consequat </p></section></div>
-<!--  <div class="col-lg-3 col-md-6"><p>Item 4</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 5</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 6</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 7</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 8</p></div> -->
-</div> 
+      <div class="row">
+        <div class="col-lg-4 col-md-6 col-sm-12" id="div1soccer">
+          <section class="box">
+            <div id="soccerdiv">  
+              <h2 class="1">
+                Soccer
+              </h2> 
+            </div>  
+            <p>
+              The game of soccer is built around the pursuit of scoring goals. Teams move the the ball up and down the field in an attempt to kick it within the goal, a framework that measures 8 feet in height and 24 feet in width at the professional level. The player guarding the goal, the goalkeeper, is the only player on a team typically allowed to touch the ball with his hands. Except during a throw-in, the other players must use their feet, knees, head and chest to control and advance the ball. A regulation game is played in two 45-minute halves.
+            </p>
+          </section>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12" id="div2rugby"> 
+          <section class="box">
+            <div id="rugbydiv">
+              <h2>
+                Rugby
+              </h2>
+            </div>
+            <p>
+              Rugby is a free-flowing game that features a combination of strength, speed and strategy to move a ball into an opponents territory. Rugby is a full-contact sport yet players wear little-or no protective gear. Rugby evolved from football (i.e. soccer) and is often called the ‘game played in heaven’. 
+            </p>
+          </section>
+        </div>
+        <div class="col-lg-4 col-md-12 col-sm-12" id="div3golf">
+          <section class="box">
+            <div id="golfdiv">
+              <h2>
+                Golf
+              </h2>
+            </div>
+            <p>
+              Golf, unlike most ball games, does not require a standardized playing area. The game is played on a course with an arranged progression of either nine or 18 holes. Each hole on the course must contain a tee box to start from, and a putting green containing the actual hole or cup (4.25 inches in width). There are other standard forms of terrain in between, such as the fairway, rough (long grass), sand traps, and hazards (water, rocks, fescue) but each hole on a course is unique in its specific layout and arrangement.
+            </p>
+          </section>
+        </div>
+      </div> 
 
-</body>
+    </body>
 </html>
